Cleaned up responsiveness and debugg overflow issue

--- a/src/pages/Motivation/Motivation.scss
+++ b/src/pages/Motivation/Motivation.scss
@@ -4,13 +4,12 @@
 .description {
   display: flex;
   justify-content: center;
-  height: 100vh;
+  height: 100%;
   background-color: $primary-honeydew;
 
   &__card {
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
     background-color: $primary-white;
     min-width: 80%;
@@ -20,9 +19,10 @@
     padding: 1rem;
     border-radius: 10px;
     box-shadow: 0px 5px 5px 1px rgb(0 0 0 / 50%);
-    margin-top: 2rem;
+    margin: 2rem 0;
 
     @include tablet {
+      justify-content: space-evenly;
       padding: 2rem;
     }
 
@@ -70,19 +70,25 @@
     margin-top: 1rem;
   }
 
+  &__commitment {
+    margin: 1rem 0;
+    font-size: 20px;
+    text-transform: capitalize;
+    text-align: center;
+  }
+
   &__calendar-btn {
     font-size: 16px;
     padding: 0.8rem;
-    margin-top: 4rem;
     border: 1px solid $primary-black;
-    background-color: steelblue;
+    background-color: $secondary-steelblue;
     color: $primary-white;
     cursor: pointer;
     border-radius: 10px;
   }
 
   &__calendar-btn:hover {
-    background-color: $supporting-lightblue;
+    background-color: $secondary-lightblue;
     transition: all 0.7s;
   }
 }
